# PrecisionCRM

./: .gitignore  README.md  render.yaml
github/: README.md  (+1 more)
pythongit/imported_recruitflow/RecruitFlow/RecruitFlow/: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOY_TO_RENDER.md  GITHUB_SETUP.md  RENDER_DEPLOYMENT.md  create_test_pdf.py  design_guidelines.md  disable-2fa.ts  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  start-all-services.sh  test-end-to-end-resume.mjs  test-integration.js  test-integration.mjs  test-pdf-parse.mjs  test-python-express-integration.js  test-python-express-integration.mjs  test-resume.txt
pythongit/imported_recruitflow/RecruitFlow/RecruitFlow/client/: index.html
pythongit/imported_recruitflow/RecruitFlow/RecruitFlow/client/src/: App.tsx  index.css
pythongit/imported_recruitflow/RecruitFlow/RecruitFlow/python-services/: README.md  requirements.txt  run_resume_parser.sh  start_persistent.py  start_service.py  test_api.py
pythongit/imported_recruitflow/RecruitFlow/RecruitFlow/python-services/resume_parser/: affinda_client.py  contact_mapper.py  main.py  text_extractor.py
pythongit/imported_recruitflow/RecruitFlow/RecruitFlow/server/: add-users.ts  auth-routes.ts  auth.ts  email.ts  external-integration.ts  index.ts  list-users.ts  local-storage.ts  objectAcl.ts  objectStorage.ts  openai.ts  outlook.ts  reset-password.ts  routes.ts  seed.ts  start-python-service.ts  storage.ts
pythongit/imported_recruitflow/RecruitFlow/RecruitFlow/shared/: schema.ts
(+45 files in other folders)
