[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.8",
    "pytest>=9.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.5",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
